// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsInput Component cria o snapshot do component 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      tags=""
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
        data-shrink="true"
        for="emailsTags"
      >
        Email
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root tagInput__tag MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-2"
            style="width: 0px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <input
          aria-describedby="emailsTags-helper-text"
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
          id="emailsTags"
          name="email"
          placeholder="add e-mails"
          type="text"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained"
        id="emailsTags-helper-text"
      >
         
      </p>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root tagInput__button MuiButton-contained"
      style="background-color: rgb(0, 150, 136); color: rgb(255, 255, 255); margin-bottom: 20px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Enviar
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`TagsInput Component deve renderizar tags quando preencher o input e pressionar tab 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      tags="contato@rarolabs.com.br,nao-responda@rarolabs.com.br"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
        data-shrink="true"
        for="emailsTags"
      >
        Email
      </label>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root tagInput__tag MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
      >
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root-7 MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend-8"
            style="width: 0px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="MuiChip-root tagInput__chip MuiChip-deletable"
          data-testid="test-id"
          role="button"
          style="background-color: rgb(79, 169, 241); color: rgb(255, 255, 255);"
          tabindex="-1"
        >
          <span
            class="MuiChip-label"
          >
            contato@rarolabs.com.br
          </span>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiChip-deleteIcon"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </div>
        <div
          class="MuiChip-root tagInput__chip MuiChip-deletable"
          data-testid="test-id"
          role="button"
          style="background-color: rgb(79, 169, 241); color: rgb(255, 255, 255);"
          tabindex="-1"
        >
          <span
            class="MuiChip-label"
          >
            nao-responda@rarolabs.com.br
          </span>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiChip-deleteIcon"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
            />
          </svg>
        </div>
        <input
          aria-describedby="emailsTags-helper-text"
          aria-invalid="false"
          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
          id="emailsTags"
          name="email"
          placeholder="add e-mails"
          type="text"
          value=""
        />
      </div>
      <p
        class="MuiFormHelperText-root MuiFormHelperText-contained"
        id="emailsTags-helper-text"
      >
         
      </p>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root tagInput__button MuiButton-contained"
      style="background-color: rgb(0, 150, 136); color: rgb(255, 255, 255); margin-bottom: 20px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Enviar
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
